[#0013] enable java17 preview features (pattern matching in switch expressions/statements)